# project-version-action

./: .gitignore  LICENSE  README.md  action.yml
.github/workflows/: build.yml
test/cabal/example/: Main.hs  example.cabal
test/dotnet/attribute/: Dockerfile  Tests.cs  attribute.csproj
test/dotnet/attribute/properties/: AssemblyInfo.cs
test/dotnet/example/: Tests.cs  example.csproj
test/node/example/: package.json  test.js
