Name:               example
Version:            0.0.0.0
Build-type:         Simple
Cabal-version:      >=1.10

Library
  default-language: Haskell2010
  build-depends:
      base >= 3.0

Test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   .
  main-is:          Main.hs
  build-depends: 
      base >= 3.0
    , HUnit
